exports[`jsdoc-codeblocks processor > invalid - Error and fix ending at the last character of the codeblock 1`] = `
/**
Some description.

@example
\`\`\`ts
type Foo = {a: string}
type Bar = Record<string, Foo>
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	Some description.

	@example
	\`\`\`ts
	type Foo = {a: string}
	type Bar = Record<string, Foo>
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Error and fix in the middle of the codeblock 1`] = `
/**
\`\`\`ts
const foo: string[] = [];

const bar: number[] = [];

const baz: boolean[] = [];
\`\`\`
Some text after.
*/
export type T0 = string;

export type TOptions = {
	/**
	\`\`\`ts
	const foo: string[] = [];

	const bar: number[] = [];

	const baz: boolean[] = [];
	\`\`\`
	Some text after.
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Error and fix starting at the first character of the codeblock 1`] = `
/**
Some description.
\`\`\`ts
let foo = 1;
foo = 2;
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	Some description.
	\`\`\`ts
	let foo = 1;
	foo = 2;
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Error ending at first column 1`] = `
undefined
`;

exports[`jsdoc-codeblocks processor > invalid - Error outside JSDoc 1`] = `
/**
Some description.
\`\`\`
type Foo = string;
\`\`\`
*/
export type T0 = string[];

type Foo = string;
`;

exports[`jsdoc-codeblocks processor > invalid - Error reporting location different from fix location 1`] = `
/**
\`\`\`ts
type Foo = () => void;
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	\`\`\`ts
	type Foo = () => void;
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Error spanning multiple lines 1`] = `
/**
\`\`\`ts
import type {PickIndexSignature} from 'type-fest';

type Foo = Record<string, unknown>;

type Test = PickIndexSignature<Foo>;
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	\`\`\`ts
	import type {PickIndexSignature} from 'type-fest';

	type Foo = Record<string, unknown>;

	type Test = PickIndexSignature<Foo>;
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Indented code blocks 1`] = `
/**
Note:
1. First point
	\`\`\`ts
	type Foo = Record<string, unknown>;
	\`\`\`
2. Second point
	\`\`\`ts
	type Bar = (arg: string) => number;
	\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	Note:
	1. First point
		\`\`\`ts
		type Foo = Record<string, unknown>;
		\`\`\`
	2. Second point
		\`\`\`ts
		type Bar = (arg: string) => number;
		\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Multiline fix 1`] = `
/**
Some description.
Some more description.

@example
\`\`\`ts
type Test = (
	foo: string,
	bar: number
) => void;
\`\`\`
@category Test
*/
export type T0 = string;

export type TOptions = {
	/**
	Some description.
	Some more description.

	@example
	\`\`\`ts
	type Test = (
		foo: string,
		bar: number
	) => void;
	\`\`\`
	@category Test
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Multiple code blocks 1`] = `
/**
@example
\`\`\`ts
const foo: string[] = [];
\`\`\`

Some text in between.

@example
\`\`\`ts
const bar = 1;
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	@example
	\`\`\`ts
	const foo: string[] = [];
	\`\`\`

	Some text in between.

	@example
	\`\`\`ts
	const bar = 1;
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Multiple errors 1`] = `
/**
@example
\`\`\`typescript
const foo = 1

const bar = new Map<string, number>()

type Baz = (x: string) => unknown
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	@example
	\`\`\`typescript
	const foo = 1

	const bar = new Map<string, number>()

	type Baz = (x: string) => unknown
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Multiple exports and multiple properties 1`] = `
/**
\`\`\`ts
function foo(example: () => number): number {
	return example();
}
\`\`\`
*/
export type T0 = string;

/**
\`\`\`ts
type Foo = Record<string, unknown>;
\`\`\`
*/
export type T1 = string;

export type T0Options = {
	/**
	\`\`\`ts
	function foo(example: () => number): number {
		return example();
	}
	\`\`\`
	*/
	p0: string;

	/**
	\`\`\`ts
	type Foo = Record<string, unknown>;
	\`\`\`
	*/
	p1: string;
};

export type T1Options = {
	/**
	\`\`\`ts
	const foo = new Map<string, number>();
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - Non fixable error 1`] = `
undefined
`;

exports[`jsdoc-codeblocks processor > invalid - Overlapping errors 1`] = `
/**
\`\`\`ts
const foo: string[][] = [];
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	\`\`\`ts
	const foo: string[][] = [];
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - With @example tag 1`] = `
/**
@example
\`\`\`ts
type Foo = {
	a: string;
	b: number;
}
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	@example
	\`\`\`ts
	type Foo = {
		a: string;
		b: number;
	}
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - With language specifiers 1`] = `
/**
\`\`\`ts
const foo: string[] = [];
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	\`\`\`ts
	const foo: string[] = [];
	\`\`\`
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - With line breaks before and after 1`] = `
/**
Some description.

Note: Some note.

\`\`\`ts
const foo = 1;
\`\`\`

@category Test
*/
export type T0 = string;

export type TOptions = {
	/**
	Some description.

	Note: Some note.

	\`\`\`ts
	const foo = 1;
	\`\`\`

	@category Test
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - With text before and after 1`] = `
/**
Some description.
\`\`\`ts
const foo: string[] = [];
\`\`\`
@category Test
*/
export type T0 = string;

export type TOptions = {
	/**
	Some description.
	\`\`\`ts
	const foo: string[] = [];
	\`\`\`
	@category Test
	*/
	p0: string;
};
`;

exports[`jsdoc-codeblocks processor > invalid - With typescript language specifiers 1`] = `
/**
\`\`\`typescript
const foo: string[] = [];
\`\`\`
*/
export type T0 = string;

export type TOptions = {
	/**
	\`\`\`typescript
	const foo: string[] = [];
	\`\`\`
	*/
	p0: string;
};
`;
